Updated POM to 0.9.5. Updated expected tests
Updated dot version to 0.9.5. Updated expected test code to get rid of
deprecated functions. Updated expected DOT files for use with the
FileReader test so that they are used with a tracked Cytoscape session
due to how node IDs are based on the Cytoscape session